crates/snapshot-tests/tests/snapshots/parser__bad_table_names__newline_literal.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[UnterminatedString]: unterminated literal string, expected `'`
  ┌─ newline_literal:1:3
  │
1 │ ['
  │   ^ expected `'`


error: unterminated literal string, expected `'`
 --> newline_literal:1:3
  |
1 | ['
  |   ^ expected `'`
Error {
    kind: "UnterminatedString",
    message: "unterminated literal string, expected `'`",
    span: 2..2,
    path: None,
}
